test/files/neg/unchecked2.check
unchecked2.scala:2: warning: non-variable type argument Int in type Option[Int] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[Int]]
                        ^
unchecked2.scala:3: warning: non-variable type argument String in type Option[String] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[String]]
                        ^
unchecked2.scala:4: warning: non-variable type argument List[String] in type Option[List[String]] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[List[String]]]
                        ^
unchecked2.scala:5: warning: non-variable type argument List[Int => String] in type Option[List[Int => String]] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[List[Int => String]]]
                        ^
unchecked2.scala:6: warning: non-variable type argument (String, Double) in type Option[(String, Double)] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[(String, Double)]]
                        ^
unchecked2.scala:7: warning: non-variable type argument String => Double in type Option[String => Double] is unchecked since it is eliminated by erasure
  Some(123).isInstanceOf[Option[String => Double]]
                        ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
